--- a/themes/pagedjs/layouts/partials/menu-sub.html
+++ b/themes/pagedjs/layouts/partials/menu-sub.html
@@ -1,4 +1,4 @@
-    <nav role="sub">
+    <nav role="sub" class="sub">
         <ul>
             {{ $url := .URL }}
             {{ range .Site.Menus.documentation }}
@@ -9,3 +9,4 @@
             </li>
             {{ end }}
         </ul>
+    </nav>
