--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -12,89 +12,68 @@ a {
   color: inherit;
   text-decoration: none;
   border: 0;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 main {
   font-size: 20px;
 
-  
   .meta {
-    text-align: center;
+    /* text-align: center; */
     margin: 0;
     width: 100%;
     max-width: 100%;
     margin-top: 2em;
     margin-bottom: 0;
     font-family: var(--font-sans-serif);
+
     .date {
       font-weight: 500;
       /* font-variation-settings: "wght" 600; */
     }
   }
+
   #title {
     margin-top: 0.3em;
     text-transform: uppercase;
     max-width: 70%;
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
     line-height: 1.2;
   }
+
   #intro {
     margin: 0 auto;
     margin-top: 2em;
     margin-bottom: 1em;
   }
-  ul {
-    max-width: 70%;
-    margin: 0 auto;
-    padding: 0;
-    li {
-      position: relative;
-      padding: 0;
 
-      &::before {
-        max-width: 70%;
-        text-align-last: justify;
-        content: ". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . ";
-        position: absolute;
-        overflow: hidden;
-        color: grey;
-        display: block;
-        z-index: 1;
-      }
-      a {
-        background: var(--color-lightest-grey);
-      }
-    }
-    h2 {
-      text-align: center;
-    }
-    p {
-       max-width: 45ch;
-    }
+  h2 {
+    /* text-align: center; */
   }
 
-  article {
+  p {
+    max-width: 45ch;
+  }
+
+  a {
+    font-style: italic;
+  }
+
     ul {
       list-style-type: none;
+      padding: 0;
+
       & li::before {
-        /* content: "»"; */
+        content: "»";
         display: block;
         position: absolute;
         margin-left: -3ch;
       }
-    }
 
     a {
       line-height: 1;
-      /* letter-spacing: 0.3px; */
-      /* font-family: var(--font-sans); */
-      /* font-size: 1.1em; */
-      /* font-weight: 500; */
       color: var(--color-primary);
-      /* text-decoration: underline; */
-
 
       &:hover {
         --light: 50%;
@@ -102,6 +81,7 @@ main {
       }
     }
   }
+
   h1,
   h2,
   h3,
@@ -113,10 +93,11 @@ main {
     /* font-variation-settings: "wght" 200; */
     font-family: var(--font-sans);
     line-height: 1.2;
-      margin-top: 2em;
-      margin-bottom: 0.5em;
-      &:first-child {
-        margin-top: 0;
+    margin-top: 2em;
+    margin-bottom: 0.5em;
+
+    &:first-child {
+      margin-top: 0;
     }
   }
 
@@ -124,18 +105,23 @@ main {
     font-size: 2.7em;
     margin: 0;
   }
+
   h2 {
     font-size: 2.3em;
   }
+
   h3 {
     font-size: 2em;
   }
+
   h4 {
     font-size: 1.8em;
   }
+
   h5 {
     font-size: 1.5em;
   }
+
   h6 {
     font-size: 1.3em;
   }
@@ -145,9 +131,9 @@ main {
     max-width: 60ch;
     font-variation-settings: "wght" 200;
     margin: 0;
-    
   }
 }
+
 img {
   max-width: 100%;
 }
@@ -169,6 +155,7 @@ table {
   border: 10px solid (--color-primary);
   border-collapse: collapse;
   font-family: var(--font-sans-serif);
+
   tr {
     td,
     th {
@@ -183,6 +170,7 @@ table {
   border-bottom: 1px solid grey;
   cursor: help;
   position: relative;
+
   &:hover .dd {
     display: block;
   }
@@ -194,11 +182,8 @@ table {
   color: white;
   font-family: var(--font-sans-serif);
   top: 2em;
-
   left: 0px;
-
   width: 15em;
-
   padding: 0.5em 1em;
   display: none;
 }
