--- a/themes/pagedjs/assets/css/main.css
+++ b/themes/pagedjs/assets/css/main.css
@@ -2,7 +2,7 @@
 @import "themes/pagedjs/assets/css/base/fonts.css";
 @import "themes/pagedjs/assets/css/base/type.css";
 @import "themes/pagedjs/assets/css/base/menu.css";
-@import "themes/pagedjs/assets/css/base/prism.css";
+/* @import "themes/pagedjs/assets/css/base/prism.css"; */
 @import "themes/pagedjs/assets/css/base/images.css";
 @import "themes/pagedjs/assets/css/base/footer.css";
 @import "themes/pagedjs/assets/css/base/postit.css";
@@ -12,6 +12,7 @@
 @import "themes/pagedjs/assets/css/base/layout-new.css";
 
 @import "themes/pagedjs/assets/css/page/index2.css";
+@import "themes/pagedjs/assets/css/page/cookbook.css";
 
 /* page specific 
 @import "themes/pagedjs/assets/css/page/doc.css"; */
