--- a/themes/pagedjs/layouts/_default/list.html
+++ b/themes/pagedjs/layouts/_default/list.html
@@ -5,8 +5,8 @@
         {{ .Content }}
     </div>
     {{ range .Pages }}
-    <a href="{{ .Permalink }}" class="article">
-        {{/*  {{ partial "cropmarks.html" . }}  */}}
+    <a href="{{ .Permalink }}" class="article" style="{{ if .Params.colorPrimary }}--color-cover:{{.Params.colorPrimary}};{{ end }} {{ if .Params.colorHeading }}--color-heading:{{.Params.colorHeading}};{{ end }}">
+        {{ partial "cropmarks.html" . }}  
         {{/*  <img src="{{ .Params.cover }}" alt="" class="cover">  */}}
         <img src="https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" alt="" class="cover">
 
