--- a/themes/pagedjs/layouts/_default/baseof.html
+++ b/themes/pagedjs/layouts/_default/baseof.html
@@ -24,13 +24,14 @@
     </div>
     {{ end }}
     {{ block "main" . }}
-    <main   style="{{ if .Params.colorPaper }} --color-paper:{{ .Params.colorPaper }} {{ end }}">
+    <main style="{{ if .Params.colorPaper }} --color-paper:{{ .Params.colorPaper }} {{ end }}">
       {{ partial "cropmarks.html" }}
       <article>
+        {{ partial "breadcrumb.html" .}}
         {{ if .Params.intro }}
         <header>
           <h1 id="title">{{ .Title }}</h1>
-          {{ if .Params.intro }}<p class="intro">{{ .Params.intro }}</p>{{end}}
+          {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }}</p>{{end}}
         </header>
         {{ end }}
         {{ .Content }}
@@ -47,6 +48,10 @@
     {{ end }}
     {{ block "footer" . }}
     {{ partial "footer.html" . }}
+    {{ end }}
+    {{ block "script" . }}
+    {{ $js := resources.Get "/js/scripts.js" }} 
+      <script src="{{$js.Permalink}}"></script>
     {{ end }}
   </body>
 
