--- a/themes/pagedjs/layouts/partials/footer.html
+++ b/themes/pagedjs/layouts/partials/footer.html
@@ -1,8 +1,6 @@
 <footer>
-    <figure>
-        {{ partial "ctl-logo.html" }}
-    </figure>
-    <div class="foot-content">
-        <p>Paged.js logo was designed by <a href="http://moglia.fr/">Anton Moglia</a> and <a href="http://julie-blanc.fr">Julie Blanc</a> in a train back from <a href="http://delure.org">Les Rencontres de Lure</a>. Minipax, the extraordinary font used on the website was designed by Raphaël Ronot and is exclusively offered through <a href="https://www.velvetyne.fr/">Velvetyne</a> type foundry. Paged.js website was designed and built by Julien Taquet thanks to the amazing <a href="https://gohugo.io/">Hugo</a> static website generator. Paged.js is maintained by the nice folks of the <a href="https://www.cabbagetreelabs.org">Cabbage Tree Labs</a>.</p>
+    <div class="postit">
+        <p class="foot-content">Paged.js is maintained <br />by the nice folks of the </p>
+        <p><a href="https://www.cabbagetreelabs.org" class="footer-logo">{{ partial "ctl-logo.html" }}</a></p>
     </div>
 </footer>
