--- a/themes/pagedjs/assets/css/page/journal.css
+++ b/themes/pagedjs/assets/css/page/journal.css
@@ -14,18 +14,19 @@
   }
 
   .article {
-    --color-cover: orange;
-    --color-heading: yellow;
-    /* display: grid; */
-    min-height: 400px;
+    /* --color-cover: orange;
+    --color-heading: yellow; */
+    display: grid;
+    /* min-height: 400px; */
     position: relative;
     margin-right: 3%;
     margin-bottom: 3%;
-    background: var(--color-cover) url(https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80);
+    /* background: var(--color-cover) url(https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80); */
+    background: var(--color-paper);
     background-size: cover;
     width: 30%;
     filter: grayscale();
-
+    padding: 2em;
     .crop-marks {
       display: none;
     }
@@ -44,12 +45,11 @@
     }
 
     .content {
-      padding: 0.8em 2em 1em;
+      padding: 0.8em 1em 1em;
       font-size: 0.9em;
       font-family: var(--font-sans);
       font-weight: 400;
       background: var(--color-cover);
-      align-self: flex-end;
       a {
         display: inline;
       }
@@ -88,6 +88,25 @@
 
     .intro {
       margin: 0;
+    }
+    .tags {
+      /* background: yellow; */
+      /* color: red; */
+      font-family: var(--font-sans);
+      padding-left: calc(1em + 1ch);
+      a {
+        display: block;
+        font-size: 0.9em;
+        &::before {
+          content: "→";
+          position: relative;
+          left: -1ch;
+          
+                }
+                &:hover {
+                  color: darkred;
+                }
+      }
     }
   }
 }
