--- a/themes/pagedjs/layouts/posts/list.html
+++ b/themes/pagedjs/layouts/posts/list.html
@@ -5,17 +5,18 @@
         {{ .Content }}
     </div>
     {{ range .Pages }}
-    <a href="{{ .Permalink }}" class="article">
+    <div class="article">
         {{ partial "cropmarks.html" . }}
-            <div class="content">
+        <a href="{{ .Permalink }}"  class="content">
             <p class="date">{{ dateFormat "2/1/2006" .Date  }}</p>
             <h2>{{ .Title }}</h2>
             <p class="intro">{{ .Params.intro | markdownify }}</p>
-            {{ if .Params.tags }}
-            {{ partial "tag-list" .Params.tags }}
-            {{ end }}
-        </div>
-    </a>
+            
+        </a>
+        {{ partial "tag-list.html" . }}
+
+    </div>
+    
     {{ end }}
   
 </div>
