--- a/themes/pagedjs/assets/css/page/cookbook.css
+++ b/themes/pagedjs/assets/css/page/cookbook.css
@@ -1,5 +1,5 @@
 .cookbook {
   /* --font-serif: "Cooper Hewitt"; */
-  font-weight: 600;
+  /* font-weight: 600; */
   background: var(--color-paper);
 }
