--- a/themes/pagedjs/layouts/documentation/single.html
+++ b/themes/pagedjs/layouts/documentation/single.html
@@ -1,12 +1,16 @@
 {{ define "main" }}
 <div class="toc">
+
+  <div class="title">CONTENTS</div>
+
   <h3>{{ .Title }}</h3>
 
   {{ .TableOfContents }}
 
+
   <aside>
     {{ with .NextInSection }}
-    <p><span class="next">next section </span>
+    <p><span class="next">next section → </span>
     <a class="next" href="{{.Permalink}}">{{.Title}}</a>
   </p>
   {{ end }}
@@ -17,19 +21,19 @@
   
   </aside>
   </div> 
-<main>
+<main class="documentation">
   {{ partial "cropmarks.html" }}
 
   <article>
     {{ partial "breadcrumb.html" . }}
     <header>
-      <h1 id="title">{{ .Title }}</h1>
+        <h1 id="title">{{ .Title }}</h1>
       {{ if .Params.intro  }}<p class="intro">{{ .Params.intro | markdownify }}</p>{{end}}
    
           </header>
 
     {{ .Content }}
-   
   </article>
 </main>
 {{ end }}
+
