--- a/themes/pagedjs/assets/css/base/fonts.css
+++ b/themes/pagedjs/assets/css/base/fonts.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Inria+Serif&display=swap');
+
 @font-face {
   font-family: "Minipax Variable";
   src: url("../fonts/MinipaxVariable.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+  font-family:"Victor Mono";
+  src:url("../fonts/VictorMono-Italic.woff2") format("woff2"),url("../fonts/VictorMono-Italic.woff") format("woff"),url("../fonts/VictorMono-Italic.otf") format("opentype");
+  font-style:italic;font-weight:400;
+}
+
+@font-face {
+  font-family:"Victor Mono";
+  src:url("../fonts/VictorMono-Regular.woff2") format("woff2"),url("../fonts/VictorMono-Regular.woff") format("woff"),url("../fonts/VictorMono-Regular.otf") format("opentype");
+  font-style:normal;font-weight:400;
 }
