--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -12,7 +12,8 @@ body {
 
 /* article */
 article {
-  font-size: 18px;
+  font-size: 17px;
+  line-height: 1.6em;
 
   .meta {
     margin: 0;
@@ -25,15 +26,6 @@ article {
 
   .date {
     font-weight: 500;
-  }
-
-  h1#title {
-    text-align: left;
-    max-width: 100%;
-    font-size: 4em;
-    line-height: 1.1;
-    text-transform: none;
-    margin-bottom: 0;
   }
 
   .intro {
@@ -50,8 +42,9 @@ article {
 
   p,
   li {
-    margin-bottom: 2em;
-    max-width: 60ch;
+    margin-bottom: 0em;
+    margin-top: 0.5em;
+    /* max-width: 45ch; */
   }
 
   a {
@@ -59,15 +52,17 @@ article {
     border: 0;
     line-height: 1;
     color: var(--color-body);
-    border-bottom: 2px;
+    background: linear-gradient(transparent 0, transparent 82%, var(--color-link) 82%, var(--color-link) 88%, transparent 88%, transparent 100%);
+    /* border-bottom: 1px solid var(--color-link); */
     font-family: var(--font-sans);
     font-style: normal;
+    transition: background-color .5s;
 
     &:hover {
-      --light: 50%;
-      --saturation: 50%;
+      --color-link: var(--color-accent);
+      color: var(--color-accent);
+      /* background:linear-gradient(transparent 0,transparent 20%,var(--color-link) 20%,var(--color-link) 88%,transparent 88%,transparent 100% ); */
     }
-    background: linear-gradient(20deg, transparent 0, transparent 10%, var(--highlight) 10%, var(--highlight) 90%, transparent 90%);
   }
 
   /* list */
@@ -98,11 +93,11 @@ article {
   h5,
   h6 {
     margin: 0;
-    font-weight: 300;
+    font-weight: 500;
     /* font-variation-settings: "wght" 200; */
     font-family: var(--font-sans);
     line-height: 1.2;
-    margin-top: 2em;
+    margin-top: 1.8em;
     margin-bottom: 0.5em;
 
     &:first-child {
@@ -111,64 +106,59 @@ article {
   }
 
   h1 {
-    font-size: 2.7em;
-    margin-top: 3em;
-    margin-bottom: 2em;
+    text-align: left;
+    max-width: 100%;
+    font-size: 2.4em;
+    line-height: 1.1;
+    text-transform: none;
+    margin-bottom: .8em;
+    margin-top: 0;
   }
 
   h2 {
-    font-size: 2.3em;
+    font-size: 2em;
+    padding-top: 2em;
   }
 
   h3 {
-    font-size: 2em;
+    font-size: 1.5em;
+    padding-top: 2em;
   }
 
   h4 {
-    font-size: 1.8em;
+    font-size: 1.2em;
   }
 
   h5 {
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   h6 {
-    font-size: 1.3em;
+    font-size: 1em;
   }
-}
 
-/* picture */
-img {
-  max-width: 100%;
-}
-
+/* code */
 
 pre {
-  /* white-space: pre-wrap;
-  font-size: 0.8em;
-  max-width: 100%;
-  font-family: monospace;
-  font-style: normal; */
+  font-family: var(--font-mono);
   font-size: .85em;
-  /* border-top: 1px solid lightgrey; */
-  padding: 0.2em 0.5em; 
-  /* font-size: 2em; */
-background: hsl(0, 2%, 90%);
-/* overflow-x: scroll; */
-overflow: auto;
+  padding: 0.2em 0.5em;
+  border: 1px solid lightgrey;
+  white-space: pre-wrap;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+  /* background: hsl(0, 2%, 90%); */
+  /* overflow: auto; */
+}
+
+code {
+  font-family: var(--font-mono);
+  font-size: .85em;
+  padding: 0em 0.5em;
 }
 
 :not(pre) code {
-  font-size: 1.1em;
-  /* background: hsl(0, 2%, 90%); */
-
-  /* background: hsl(0, 2%, 90%);
-  padding: 0.1em 0.2em;
-  line-height: 0;
-  background: black;
-  color: green;
-  border: 0;
-  box-shadow: unset; */
+  padding: 0;
 }
 
 
@@ -176,7 +166,7 @@ overflow: auto;
 table {
   border: 10px solid (--color-primary);
   border-collapse: collapse;
-  font-family: var(--font-sans-serif);
+  font-family: var(--font-sans);
 
   tr {
     td,
@@ -186,6 +176,16 @@ table {
     }
   }
 }
+
+  /* figure */
+  figure {
+    margin: 2em 30em;
+    background: red;
+  }
+  /* picture */
+  img {
+    max-width: 100%;
+  }
 
 
 /* definition terms */
@@ -210,4 +210,5 @@ table {
   width: 15em;
   padding: 0.5em 1em;
   display: none;
+}
 }
