--- a/themes/pagedjs/assets/css/page/journal.css
+++ b/themes/pagedjs/assets/css/page/journal.css
@@ -1,38 +1,32 @@
-.articleList {
+.article-list {
   grid-column-start: start;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* grid-column-gap: 10%; */
-  /* grid-row-gap: 8%; */
 
-  /* height: unset; */
   .header {
-    /* grid-column-start: span 2; */
-    /* grid-column-end: 2; */
     width: 100%;
   }
 
   .article {
-    /* --color-cover: orange;
-    --color-heading: yellow; */
     display: grid;
-    /* min-height: 400px; */
     position: relative;
     margin-right: 3%;
     margin-bottom: 3%;
-    /* background: var(--color-cover) url(https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80); */
+    background: url(https://images.unsplash.com/photo-1512331455279-c8ae8178f586?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80);
     background: var(--color-paper);
     background-size: cover;
     width: 30%;
     filter: grayscale();
     padding: 2em;
+
     .crop-marks {
       display: none;
     }
 
     &:hover {
-      /* box-shadow: 0 0 0 10px var(--color-primary); */
+      box-shadow: 0 0 0 10px transparent;
+
       .crop-marks {
         display: block;
       }
@@ -41,7 +35,6 @@
 
     .cover {
       object-fit: cover;
-      /* filter: grayscale(); */
     }
 
     .content {
@@ -50,6 +43,7 @@
       font-family: var(--font-sans);
       font-weight: 400;
       background: var(--color-cover);
+
       a {
         display: inline;
       }
@@ -73,41 +67,44 @@
     }
 
     h2 {
-        color: var(--color-heading);
-        font-weight: 400;
-        letter-spacing: 0.1ch;
-        margin: 0;
-        margin-top: .2em;
-        margin-bottom: .3em;
-        border-bottom: 2px solid;
-        line-height: 1.12;
-        padding-bottom: .1em;
-        width: min-content;
-        padding-right: 1em;
+      color: var(--color-heading);
+      font-weight: 600;
+      margin: 0;
+      margin-top: .2em;
+      margin-bottom: .8em;
+      border-bottom: 2px solid;
+      line-height: 1.12;
+      padding-bottom: .1em;
+      width: min-content;
+      padding-right: 1em;
     }
 
     .intro {
       margin: 0;
     }
+
     .tags {
-      /* background: yellow; */
-      /* color: red; */
       font-family: var(--font-sans);
       padding-left: calc(1em + 1ch);
+
       a {
         display: block;
         font-size: 0.9em;
+
         &::before {
           content: "→";
           position: relative;
           left: -1ch;
-          
-                }
-                &:hover {
-                  color: darkred;
-                }
+        }
+
+        &:hover {
+          color: var(--color-accent);
+        }
       }
     }
+  }
+  &:hover h2 {
+    color: var(--color-accent);
   }
 }
 
