--- a/themes/pagedjs/layouts/posts/list.html
+++ b/themes/pagedjs/layouts/posts/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="articleList">
+<div class="article-list">
     <div class="header">
         <h1>{{ .Title }}</h1>
         {{ .Content }}
