--- a/themes/pagedjs/assets/css/base/type.css
+++ b/themes/pagedjs/assets/css/base/type.css
@@ -12,7 +12,7 @@ body {
 
 /* article */
 article {
-  font-size: 17px;
+  font-size: 18px;
   line-height: 1.6em;
 
   .meta {
@@ -44,7 +44,11 @@ article {
   li {
     margin-bottom: 0em;
     margin-top: 0.5em;
-    /* max-width: 45ch; */
+    hyphens: auto;
+  }
+
+  p {
+    max-width: 60ch;
   }
 
   a {
@@ -52,16 +56,13 @@ article {
     border: 0;
     line-height: 1;
     color: var(--color-body);
-    background: linear-gradient(transparent 0, transparent 82%, var(--color-link) 82%, var(--color-link) 88%, transparent 88%, transparent 100%);
-    /* border-bottom: 1px solid var(--color-link); */
-    font-family: var(--font-sans);
-    font-style: normal;
+    background: linear-gradient(transparent 0, transparent 78%, var(--color-link) 78%, var(--color-link) 82%, transparent 82%, transparent 100%);
+    font-style: italic;
     transition: background-color .5s;
 
     &:hover {
       --color-link: var(--color-accent);
       color: var(--color-accent);
-      /* background:linear-gradient(transparent 0,transparent 20%,var(--color-link) 20%,var(--color-link) 88%,transparent 88%,transparent 100% ); */
     }
   }
 
@@ -93,7 +94,7 @@ article {
   h5,
   h6 {
     margin: 0;
-    font-weight: 500;
+    font-weight: 200;
     /* font-variation-settings: "wght" 200; */
     font-family: var(--font-sans);
     line-height: 1.2;
@@ -139,20 +140,23 @@ article {
 
 /* code */
 
+
+.highlight {
+  margin: 1em 0 2em 0;
+}
 pre {
-  font-family: var(--font-mono);
-  font-size: .85em;
+  /* font-family: var(--font-mono); */
+  /* font-size: .85em; */
   padding: 0.2em 0.5em;
   border: 1px solid lightgrey;
   white-space: pre-wrap;
-  margin-top: 0.5em;
-  margin-bottom: 1em;
+  margin: 0;
   /* background: hsl(0, 2%, 90%); */
-  /* overflow: auto; */
+  /* overflow: auto; */
 }
 
 code {
-  font-family: var(--font-mono);
+  /* font-family: var(--font-mono); */
   font-size: .85em;
   padding: 0em 0.5em;
 }
@@ -179,8 +183,7 @@ table {
 
   /* figure */
   figure {
-    margin: 2em 30em;
-    background: red;
+    margin: 2em 0em;
   }
   /* picture */
   img {
