--- a/themes/pagedjs/assets/css/main.css
+++ b/themes/pagedjs/assets/css/main.css
@@ -7,6 +7,7 @@
 @import "themes/pagedjs/assets/css/base/footer.css";
 @import "themes/pagedjs/assets/css/base/postit.css";
 @import "themes/pagedjs/assets/css/base/toc.css";
+@import "themes/pagedjs/assets/css/base/syntax.css";
 
 
 @import "themes/pagedjs/assets/css/base/layout.css";
